# obscenity

./: .gitignore  README.md  custom.html  custom.json  helloword.json  math.t  notes.txt  prog.tasm  pyproject.toml  sq.html  strtest.html  tasm.py
asm/: prog.tasm
obscenity/: compiler.py  dicts.py  tasm.py  units.py
tranquility_files/: custom.json  helloword.t  math..html  math.copy.json  math.json  sq.json  sq.t  strtest.t  tabletest.t  tranqc  tvm.js
