[tool.poetry]
name = "obscenity"
version = "0.1.0"
description = "Alternate compiler and syntax for tranquility"
authors = ["Shahriyar Shawon <ShahriyarShawon321@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
tasm = "obscenity.tasm:main"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
